--- a/origintheme/public/css/origintheme.css
+++ b/origintheme/public/css/origintheme.css
@@ -691,3 +691,11 @@ input[type="radio"], input[type="checkbox"] {
   margin-top: 6px;
   border-radius: 5px;
 }
+
+.page-actions {
+  padding-right: 0;
+}
+
+.btn-order {
+  padding: 2px 10px 0
+}
